objects/CMPL123__Object_With_V1_Trigger__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Auto_Number_Field__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Auto Number Field</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CMPL123__CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Checkbox_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Currency_Field__c</fullName>
        <label>Currency Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMPL123__Date_Field__c</fullName>
        <label>Date Field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123__Date_Time_Field__c</fullName>
        <label>Date Time Field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123__Email_Field__c</fullName>
        <label>Email Field</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMPL123__Formula_Field__c</fullName>
        <formula>"Test Text"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Geolocation_Field__c</fullName>
        <label>Geolocation Field</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>CMPL123__Long_Text_Area_Field__c</fullName>
        <label>Long Text Area Field</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Lookup_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup Field</label>
        <referenceTo>CMPL123__Object_With_V1_Trigger__c</referenceTo>
        <relationshipLabel>Objects With V1 Trigger</relationshipLabel>
        <relationshipName>Objects_With_V1_Trigger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123__MultiSelect_Picklist_Field__c</fullName>
        <label>MultiSelect Picklist Field</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MultiValue 1</fullName>
                </value>
                <value>
                    <fullName>MultiValue 2</fullName>
                </value>
                <value>
                    <fullName>MultiValue 3</fullName>
                </value>
                <value>
                    <fullName>MultiValue 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Number_Field__c</fullName>
        <label>Number Field</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Percent_Field__c</fullName>
        <label>Percent Field</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMPL123__Phone_Field__c</fullName>
        <label>Phone Field</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123__Picklist_Field__c</fullName>
        <label>Picklist Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
                <value>
                    <fullName>Value 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Rich_Text_Area_Field__c</fullName>
        <label>Rich Text Area Field</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CMPL123__Text_Area_Field__c</fullName>
        <label>Text Area Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Text_Field__c</fullName>
        <label>Text Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Time_Field__c</fullName>
        <label>Time Field</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CMPL123__URL_Field__c</fullName>
        <label>URL Field</label>
        <type>Url</type>
    </fields>
    <label>Object With V1 Trigger</label>
    <nameField>
        <label>Object With V1 Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objects With V1 Trigger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>